--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">TicTacToe</string>
     <string name="X">X</string>
     <string name="O">O</string>
-    <string name="NewGame">New Game</string>
+    <string name="NewGame">Новая игра</string>
     <string name="Game">Идет Игра</string>
 </resources>
