--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,12 @@
 <resources>
-    <string name="app_name">TicTacToe</string>
+    <string name="app_name">Крестики-Нолики</string>
     <string name="X">X</string>
     <string name="O">O</string>
-    <string name="NewGame">Новая игра</string>
-    <string name="Game">Идет Игра</string>
+    <string name="new_game">Новая игра</string>
+    <string name="status_game">Идет Игра</string>
+    <string name="win_chross">Победил Крестик</string>
+    <string name="win_zero">Победил Нолик</string>
+    <string name="draw">Ничья</string>
+    <string name="about_game">Игроки по очереди ставят на свободные клетки поля 3х3 знаки (одини всегда крестики, другие всегда нолики). Первый, выстроивший в ряд 3 своих фигуры по вертикали, горизонтали или диагонали, выигрывает. Для начала игры выбирете крестик или нолик тот кто ходит первый.</string>
+    <string name="bt_back">Назад</string>
 </resources>
