--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">TicTacToe</string>
     <string name="X">X</string>
     <string name="O">O</string>
-    <string name="NewGame">New Game</string>
-    <string name="Game">Идет Игра</string>
+    <string name="new_game">New Game</string>
+    <string name="status_game">Going Game</string>
+    <string name="win_chross">Win Chross</string>
+    <string name="win_zero">Win Zero</string>
+    <string name="draw">Draw</string>
+    <string name="about_game">Players take turns to put on the free cells of the field 3x3 signs (one always crosses, the other always zeros). The first, which has built up 3 of its figures vertically, horizontally or diagonally, wins. To start the game, choose a cross or a notch the one who walks first.</string>>
+    <string name="bt_back">Back</string>
 </resources>
