--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,4 +9,6 @@
     <string name="draw">Ничья</string>
     <string name="about_game">Игроки по очереди ставят на свободные клетки поля 3х3 знаки (одини всегда крестики, другие всегда нолики). Первый, выстроивший в ряд 3 своих фигуры по вертикали, горизонтали или диагонали, выигрывает. Для начала игры выбирете крестик или нолик тот кто ходит первый.</string>
     <string name="bt_back">Назад</string>
+    <string name="stroke_chross">Ходит Крестик</string>
+    <string name="stroke_zero">Ходит Нолик</string>
 </resources>
